--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
             wget https://github.com/hadolint/hadolint/releases/download/v1.17.5/hadolint-Linux-x86_64
             mv hadolint-Linux-x86_64 hadolint
             chmod +x hadolint
-            sudo mv hadolint usr/local/bin
+            mv hadolint usr/local/bin
             apk add --update make
       - run:
           name: Linting the python code and Dockerfile
